topic/kubernetes/infra/prod/monitoring/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: >
      add_header Strict-Transport-Security 'max-age=31536000;
      includeSubDomains;' always;
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* /api/actuator {
          deny all;
      }
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx-prod
  rules:
    - host: kubeprometheus.cici.com
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /
            pathType: ImplementationSpecific

    - host: kubealertmanager.cici.com
      http:
        paths:
          - backend:
              service:
                name: alertmanager
                port:
                  number: 9093
            path: /
            pathType: ImplementationSpecific

    - host: kubegrafana.cici.com
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
